# eemb_gdb_bridge

./: CMakeLists.txt  LICENSE.md  main.py  mingw64-build.bat
cmake/packaging/: CMakeLists.txt
doc/man/: CMakeLists.txt
inc/: CMakeLists.txt  backend.h  stlink.h
src/st-util/: gdb-server.c
src/stlink-lib/: chipid.c  commands.h  common.c  helper.c  helper.h  read_write.c  register.h  uart.c  uart.h
src/uartlib-serial/: CMakeLists.txt  ModbusRTU_XSerial.cpp  ModbusRTU_XSerial.h  modbus_wrapper.cpp  modbus_wrapper.h  xserial.cpp  xserial.hpp
src/win32/: sys_time.h  win32_socket.h
src/win32/getopt/: getopt.c
src/win32/unistd/: unistd.h
